fix spacing in the list, hosing file update

--- a/src/Event.css
+++ b/src/Event.css
@@ -1,6 +1,6 @@
 .list-item {
     height: 14vh;
-    margin: 17px 10%;
+    margin: 17px 5%;
     border-radius: 15px;
     display: flex;
     justify-content: space-evenly;
